confirmação de cadastro

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <label for="femea">feminino</label>
                 <input type="radio" name="gener" id="femea">
                 <br>
-                <input type="button" value="enviar">
+                <input type="button" value="enviar" onclick="alert('cadastro concluido com sucesso')">
             </form>
         </div>
     </div>
